# ProjectIC

./: .gitignore  README.md  assistant_answerer.py  assistant_context.py  llm_provider.py  main.py  pyproject.toml  repository.py  resolution.py  schema.sql  seed.sql  test_api.py  test_assistant_answerer.py  test_assistant_context.py  test_integration.py  test_llm_provider.py  test_repository.py  test_resolution.py
.github/workflows/: ci.yml  deploy-pages.yml
frontend/: App.backend-connected.tsx.bak  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
sample-ui/: README.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
sample-ui/src/: App.tsx  AppDemo.tsx  styles.css
