[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ic"
version = "0.1.0"
description = "Multi-tenant party-venue catalog and assistant API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2",
]

[tool.setuptools]
py-modules = [
    "main",
    "repository",
    "resolution",
    "assistant_context",
    "assistant_answerer",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
